Fixing odd top-shifting issue

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -269,9 +269,10 @@ navbar#side
 
 #frame
 {
+  top: 0px;
   display:  block;
   overflow: hidden;
-  position: absolute;
+  position: fixed;
   width:    100%;
   height:   100%;
 }
